k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  namespace: shop-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: dampayal/catalog-service:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: shop-demo
spec:
  selector:
    app: catalog-service
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
