k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: shop-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: dampayal/order-service:latest
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shop-demo
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 8001
  type: ClusterIP
